--- a/HReblog/html/def/index.html
+++ b/HReblog/html/def/index.html
@@ -10,14 +10,15 @@
 			<ul>
 			<li>reblog a post voted by selected author/s</li>
 			<li>reblog a new post filtered by authors, tags, keywords, etc...</li>
-			<li>is there a feature you'd like missing? Let us know about it!</li>
+			<li>is there a feature you'd like missing? <a href="https://github.com/remirafun/hivereblogger/issues" target="_blank" rel="nofollow noopener noreferrer">Let us know about it!</a></li>
 			</ul>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col">
 		<h4>Open Source</h4> 
-		<span>Hive Reblogger is open source. You can access its <a href="https://github.com/remirafun/hivereblogger" target="_blank" rel="nofollow noopener noreferrer">repository here.</a></span>
+		<div>Hive Reblogger is open source. You can access its <a href="https://github.com/remirafun/hivereblogger" target="_blank" rel="nofollow noopener noreferrer">repository here.</a></div>
+		<div style="text-align:left;">It was programmed by <a href="https://hive.blog/@mirafun" target="_blank" rel="nofollow noopener noreferrer">@mirafun</a>, creator of <a href="https://mirafungames.com" target="_blank">mirafungames.com</a></div>
 		</div>
 		<div class="col">
 			<h4>Support</h4> 
@@ -34,6 +35,7 @@
 			<a class="btn" href="https://hivesigner.com/sign/transfer?to=hivereblogger&amp;amount=10%20HBD" target="_blank" rel="nofollow noopener noreferrer">10 HBD</a>
 			</div>
 		</div>
+		
 	</div>
 </div>
 
